Intial implementation of more tags including validate, render, renderErrors, and migration of renderInput into Grails taglib etc.
git-svn-id: http://svn.codehaus.org/groovy/trunk@3441 a5544e8c-8a19-0410-ba12-f9af4593a198